# ProjectTPGame2.0

./: CConstants.h  CMakeLists.txt  Factories.h  Field.h  Game.h  GenericUnit.h  IUnit.h  Player.h  Position.h  Units.h  main.cpp
.gitignore/: .gitignore
include/: Armies.h  Army.h  AtackingArmy.h  Avatar.h  CArmy.h  CArmyUnion.h  CConstants.h  CPosition.h  Cell.h  Field.h  Fraction.h  Fractions.h  Game.h  GenericUnit.h  IObserver.h  IUnit.h  Life.h  Map.h  MovingArmy.h  Player.h  Position.h  StayingArmy.h  Units.h  outputs.h
include/Reader/: ConstantsReader.h  FileReader.h  Reader.h
parameters/: AmericanWarrior  RussianWarrior  parametrs
scr/: Avatar.cpp  CPosition.cpp  Field.cpp  Fractions.cpp  Game.cpp  GenericUnit.cpp  Life.cpp  Player.cpp  Position.cpp  Units.cpp  main.cpp  outputs.cpp
src/: Armies.cpp  Army.cpp  AtackingArmy.cpp  Avatar.cpp  CArmyUnion.cpp  CPosition.cpp  Cell.cpp  Fractions.cpp  Game.cpp  GenericUnit.cpp  Map.cpp  MovingArmy.cpp  Player.cpp  StayingArmy.cpp  Units.cpp
src/Reader/: ConstantsReader.cpp  FileReader.cpp  Reader.cpp
tests/: CMakeLists.txt  tests.cpp
